bugfix: Compendium link in Advancement view only covers a small part of the icon (#1151)
- make compendium link cover the full icon

--- a/styles/css/app/advancement-tracker.css
+++ b/styles/css/app/advancement-tracker.css
@@ -278,6 +278,11 @@
 	z-index: 0;
 }
 
+.pfu-advancement__entry__card-ring-img-link {
+	display: block;
+	clip-path: circle(50%);
+}
+
 .pfu-advancement__entry__card-ring__badges {
 	position: absolute;
 	inset: 0;
